Terms line up properly behind the word 'in' now. oEmbed are no longer floated so content doesn't wrap around them in wierd ways.

--- a/sites/all/themes/openscholar/scholar_base/css/scholar-base.css
+++ b/sites/all/themes/openscholar/scholar_base/css/scholar-base.css
@@ -290,3 +290,7 @@ div.terms {
 html[xmlns] .clearfix, html[xmlns] .clear-block {
 	display: block;
   }
+  
+.oembed {
+	float: none;
+}
